Don't store newlines at the end of each line in the hold/pattern spaces, instead add the newline when the pattern space is printed. Make the `G' and `H' commands add a newline to the space before the data, remove bogus addition of newline from `x' command.

PR:		29790, 38195